--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'countrypicker' %>
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
@@ -17,26 +20,8 @@
     <link rel="stylesheet" href="assets/css/owl-carousel.css">
 
     <link rel="stylesheet" href="assets/css/lightbox.css">
-    <script src="jquery-2.1.0.min.js"></script>
 
-    <!-- Bootstrap -->
-    <script src="popper.js"></script>
-    <script src="bootstrap.min.js"></script>
-
-    <!-- Plugins -->
-    <script src="owl-carousel.js"></script>
-    <script src="accordions.js"></script>
-    <script src="datepicker.js"></script>
-    <script src="scrollreveal.min.js"></script>
-    <script src="waypoints.min.js"></script>
-    <script src="jquery.counterup.min.js"></script>
-    <script src="imgfix.min.js"></script> 
-    <script src="slick.js"></script> 
-    <script src="lightbox.js"></script> 
-    <script src="isotope.js"></script> 
-    
-    <!-- Global Init -->
-    <script src="custom.js"></script>
+    <script src="/javascript/countrypicker.js"></script>
   </head>
 
   <body>
